@@ -39,9 +39,6 @@ class ExtractGeoLocationTest extends Specification with DataTables with Validati
   "extractGeoLocation should correctly extract location data from IP addresses where possible"      ! e2^
                                                                                                     end
 
-  //val dbFile = getClass.getResource("/maxmind/GeoLiteCity.dat").toURI.getPath
-  //val ipGeo = IpGeo(dbFile, memCache = true, lruCache = 20000)
-
   val config = IpToGeoEnrichment(new URI("/not-used/"), "GeoLiteCity.dat", true)
 
   // Impossible to make extractIpLocation throw a validation error
